--- a/index.html
+++ b/index.html
@@ -39,6 +39,63 @@
         <a href="#" class="btn">Accept</a>
     </div>
 </section>
+<section id="platform" data-js-animation="bounceInUp">
+    <div class="wr">
+        <h2><b>First HEADER</b></h2>
+        <h3>Second Header</h3>
+
+        <div class="items">
+            <div class="row">
+                <div class="col" data-js-animation="bounceInLeft"><img src="img/1.jpg" ></div>
+                <div class="col" data-js-animation="bounceInRight">
+                    <h4>Lorem ipsum dolor sit amet, consectetur.</h4>
+                    <div class="text">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda aut autem
+                        consectetur dolor ducimus esse fugiat incidunt minus obcaecati omnis porro quidem quisquam
+                        similique suscipit tempora tenetur unde veritatis, voluptates?
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col" data-js-animation="bounceInRight"><img src="img/2.jpg" ></div>
+                <div class="col" data-js-animation="bounceInLeft">
+                    <h4>Lorem ipsum dolor sit amet, consectetur.</h4>
+                    <div class="text">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda aut autem
+                        consectetur dolor ducimus esse fugiat incidunt minus obcaecati omnis porro quidem quisquam
+                        similique suscipit tempora tenetur unde veritatis, voluptates?
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col" data-js-animation="bounceInLeft"><img src="img/3.jpg" ></div>
+                <div class="col" data-js-animation="bounceInRight">
+                    <h4>Lorem ipsum dolor sit amet, consectetur.</h4>
+                    <div class="text">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda aut autem
+                        consectetur dolor ducimus esse fugiat incidunt minus obcaecati omnis porro quidem quisquam
+                        similique suscipit tempora tenetur unde veritatis, voluptates?
+                    </div>
+
+                    <div class="icons">
+                        <img src="img/wifi.jpg" alt="">
+                        <img src="img/bluetooth.jpg" alt="">
+                        <img src="img/4g.jpg" alt="">
+                        <img src="img/UHF.jpg" alt="">
+                        <img src="img/wifi2.jpg" alt="">
+                    </div>
+                </div>
+            </div>
+
+            <div class="red-dot">
+                <div class="cont"></div>
+                <div class="cont"></div>
+                <div class="cont"></div>
+                <div class="dot"></div>
+            </div>
+        </div>
+    </div>
+</section>
 
 </body>
 </html>
