--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </div>
     </div>
 </header>
-<section id="inquire=">
+<section id="inquire">
     <div class="wr">
         <div class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum laborum officiis totam?</div>
         <a href="#" class="btn">Accept</a>
