--- a/index.html
+++ b/index.html
@@ -96,6 +96,109 @@
         </div>
     </div>
 </section>
+<section id="product" data-js-animation="bounceInUp">
+    <div class="wr">
+        <div class="col col-1" data-js-animation="bounceInLeft">
+            <div class="row-1">
+                <h2><b>Lorem</b> ipsum.</h2>
+                <div class="note">Select icons to display additional information</div>
+            </div>
+            <div class="row-2">
+                <div class="col-1">Name of element</div>
+                <div class="col-2">
+                    <span></span>
+                </div>
+            </div>
+            <div class="row-3">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus consequatur cum, debitis delectus doloremque dolores enim et facere impedit labore minima nemo nisi nostrum pariatur provident qui quibusdam quos saepe?
+            </div>
+        </div>
+        <div class="col col-2" data-js-animation="bounceInRight">
+            <div class="square">
+                <div class="cont">
+                    <div class="text">
+                        Your <br>
+                        Product <br>
+                        Here <br>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<section id="team" data-js-animation="bounceInUp">
+    <div class="wr">
+        <div class="for-title">
+            <h2>Lorem ipsum dolor sit amet, <b>consectetur adipisicing.</b></h2>
+            <div class="descr">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa officiis quasi
+                voluptatibus voluptatum? Amet debitis dicta ducimus eaque, excepturi fugiat modi mollitia nihil officiis
+                perferendis repellat reprehenderit, repudiandae rerum, sequi?
+            </div>
+        </div>
+        <div class="team-list">
+            <div class="col" data-js-animation="bounceInLeft">
+                <div class="for-photo">
+                    <div class="bd"></div>
+                    <div class="photo" style="background-image:url(img/girl1.jpg);"></div>
+                </div>
 
+                <div class="nick">Lorem ipsum.</div>
+                <div class="spec">Lorem ipsum.</div>
+                <div class="info">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur culpa dicta et
+                    labore numquam voluptate.
+                </div>
+
+            </div>
+            <div class="col" data-js-animation="bounceInRight">
+                <div class="for-photo">
+                    <div class="bd rotate-250"></div>
+                    <div class="photo" style="background-image:url(img/girl2.jpg);"></div>
+                </div>
+
+                <div class="nick">Lorem ipsum.</div>
+                <div class="spec">Lorem ipsum.</div>
+                <div class="info">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur culpa dicta et
+                    labore numquam voluptate.
+                </div>
+
+            </div>
+        </div>
+    </div>
+</section>
+<footer data-js-animation="bounceInUp">
+    <div class="wr">
+        <div class="col col-1 grow" >
+            <h3>connect</h3>
+            <a href="#" class="social"><span class="socicon-facebook"></span></a>
+            <a href="#" class="social"><span class="socicon-twitter"></span></a>
+            <a href="#" class="social"><span class="socicon-linkedin"></span></a>
+        </div>
+        <div class="col col-2 grow">
+            <h3>Sign up anD recEive updates!</h3>
+            <form>
+                <input type="text" name="email" placeholder="Enter email"/>
+            </form>
+        </div>
+        <div class="col col-3">
+            <h3>Contact us</h3>
+            <div class="row">
+                <div class="col">
+                    05 W Park Ave <br>
+                    Texas Unidted States
+                </div>
+                <div class="col">
+                    1800 000 0000 <br>
+                    <a href="mailto:info@yourdomain.com">info@yourdomain.com</a></div>
+            </div>
+            <div class="copy">© 2017. All rights reserved</div>
+        </div>
+    </div>
+</footer>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/is-in-viewport/3.0.0/isInViewport.min.js"></script>
+<script src="js/script.js"></script>
 </body>
 </html>
