--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
             <div class="col" data-js-animation="bounceInRight">
                 <div class="for-photo">
                     <div class="bd rotate-250"></div>
-                    <div class="photo" style="background-image:url(img/girl2.jpg);"></div>
+                    <div class="photo" style="background-image:url(img/man.jpg);"></div>
                 </div>
 
                 <div class="nick">Lorem ipsum.</div>
